# experiments_PBplusLP

./: README.md
instances/dec/MIPLIB01/miplib2/: air01.0.s.opb.bz2  air01.0.u.opb.bz2  air02.0.s.opb.bz2  air02.0.u.opb.bz2  air06.0.s.opb.bz2  air06.0.u.opb.bz2  bm23.0.s.opb.bz2  bm23.0.u.opb.bz2  cracpb1.0.s.opb.bz2  cracpb1.0.u.opb.bz2  diamond.0.d.opb.bz2  lp4l.0.s.opb.bz2  lp4l.0.u.opb.bz2  p0040.0.s.opb.bz2  p0040.0.u.opb.bz2  p0291.0.s.opb.bz2  p0291.0.u.opb.bz2  pipex.0.s.opb.bz2  pipex.0.u.opb.bz2  sentoy.0.s.opb.bz2  sentoy.0.u.opb.bz2  stein15.0.s.opb.bz2  stein15.0.u.opb.bz2  stein9.0.s.opb.bz2  stein9.0.u.opb.bz2
instances/dec/MIPLIB01/miplib2003/: cap6000.0.s.opb.bz2  cap6000.0.u.opb.bz2  disctom.0.s.opb.bz2  disctom.0.u.opb.bz2  ds.0.s.opb.bz2  ds.0.u.opb.bz2  harp2.0.u.opb.bz2  protfold.0.s.opb.bz2  protfold.0.u.opb.bz2  sp97ar.0.s.opb.bz2  sp97ar.0.u.opb.bz2  stp3d.0.s.opb.bz2  stp3d.0.u.opb.bz2  t1717.0.d.opb.bz2
instances/dec/MIPLIB01/miplib2010/: acc-tight4.0.s.opb.bz2  acc-tight4.0.u.opb.bz2  acc-tight5.0.s.opb.bz2  acc-tight5.0.u.opb.bz2  acc-tight6.0.s.opb.bz2  acc-tight6.0.u.opb.bz2  ash608gpia-3col.0.d.opb.bz2  bab1.0.d.opb.bz2  bab5.0.s.opb.bz2  bab5.0.u.opb.bz2  bley_xl1.0.s.opb.bz2  bley_xl1.0.u.opb.bz2  bnatt350.0.s.opb.bz2  bnatt350.0.u.opb.bz2  bnatt400.0.s.opb.bz2  bnatt400.0.u.opb.bz2  circ10-3.0.d.opb.bz2  co-100.0.s.opb.bz2  co-100.0.u.opb.bz2  cov1075.0.s.opb.bz2  cov1075.0.u.opb.bz2  datt256.0.d.opb.bz2  eil33-2.0.s.opb.bz2  eil33-2.0.u.opb.bz2  eilA101-2.0.s.opb.bz2  eilA101-2.0.u.opb.bz2  eilB101.0.s.opb.bz2  eilB101.0.u.opb.bz2  ex1010-pi.0.d.opb.bz2  ex9.0.s.opb.bz2  ex9.0.u.opb.bz2  f2000.0.d.opb.bz2  go19.0.s.opb.bz2  (+133 more)
raw_data/: README.md  cplex.csv  gurobi.csv  lp.csv  lp_deep.csv  lp_gomorycuts.csv  lp_learncuts.csv  lp_phase.csv  naps_bignum.csv  roundingsat.csv  sat4j.csv  sat4j_cp.csv  scip.csv
source/: CMakeLists.txt  README.md  aux.h  roundingsat.cc
(+591 files in other folders)
